--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "mongoose": "^6.2.5"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.5",
+    "mongoose-unique-validator": "^3.0.0",
+    "multer": "^1.4.4"
   }
 }
